force-app/main/default/objects/Budget__c/fields/Over_Budget__c.field-meta.xml
<CustomField>
    <fullName>Over_Budget__c</fullName>
    <formula>Remaining_Budget__c  &lt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Over Budget</label>
    <type>Checkbox</type>
</CustomField>